--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,10 @@
 */
 
 header {
-    height: 110px;
+    height: 170px;
+}
+
+header .container-border {
     border-bottom: 1px solid var(--light-yellow);
 }
 
@@ -14,7 +17,8 @@ header .container {
     width: 90%;
     max-width: 1200px;
     margin: auto;
-    height: 100%;
+    height: 110px;
+
 }
 
 header .menu-mobile {
@@ -221,7 +225,7 @@ header .menus .icone-container .mensagem {
 .dropdown-content {
     display: none;
     position: absolute;
-    z-index: 1;
+    z-index: 10;
 }
 
 .dropdown-menu {
@@ -244,7 +248,7 @@ header .menus .dropdown-conta .dropdown-content {
     border-radius: 20px;
 
     background-color: var(--light-yellow);
-    z-index: 1;
+    z-index: 10;
     list-style: none;
 }
 
@@ -398,7 +402,7 @@ header .menus .dropdown-carrinho .dropdown-content .info-compra a.ver-carrinho {
 
 .linhas .dropdown-linha .dropdown-content {
     padding: 20px;
-    top: 60px;
+    top: 59px;
     background-color: var(--light-yellow);
     border-radius: 0px 0px 20px 20px;
     width: 100%;
@@ -462,6 +466,10 @@ header .menus .dropdown-carrinho .dropdown-content .info-compra a.ver-carrinho {
 }
 
 @media (max-width: 768px) {
+
+    header {
+        height: 110px;
+    }
 
     header .container {
         width: 90%;
@@ -616,7 +624,7 @@ header .menus .dropdown-carrinho .dropdown-content .info-compra a.ver-carrinho {
         background-color: var(--brown-yellow);
     }
 
-    .linhas-container .linhas {
+    .linhas-container {
         display:none;
     }
 
@@ -624,7 +632,7 @@ header .menus .dropdown-carrinho .dropdown-content .info-compra a.ver-carrinho {
         background-color: white;
         position: absolute;
         left: 0;
-        top: 110px;
+        top: 109px;
         display: none;
         justify-content: center;
         align-items: center;
